--- a/docs/css/os_style.css
+++ b/docs/css/os_style.css
@@ -21,7 +21,7 @@ p,h1,h2,h3,h4,h5,h6{margin:0; padding:2px;}
 #statusbar{position:fixed; top:0; right:0; bottom:auto; left:0; height:20px; background:rgba(0,0,0,0.75); z-index: 10;  color:#ccc; font-size:80%;}
 #mainbar{position:fixed; top:20px; right:0; bottom:40px; left:0; background:none; z-index: 8;}
 #appcontainerhoder {position: absolute; bottom:0; left:0; right:0;}
-#mainbar .appscontainer{  color:#fff; height:auto; width:90%; max-width: 800px; background:rgba(0,0,0,0.5); margin:20px auto; padding:10px; border-radius: 2px;    box-shadow: 0 0 10px rgba(29, 29, 29, 0.66)}
+#mainbar .appscontainer{  color:#fff; height:auto; width:90%; background:rgba(0,0,0,0.5); margin:20px auto; padding:10px; border-radius: 2px;    box-shadow: 0 0 10px rgba(29, 29, 29, 0.66)}
 #mainbar .appscontainer .icon { width:60px; height:60px; margin:5px; display: inline-block; text-align: center; font-size: 70%;}
 .windowframe{background:none; width: 100%; height: 100%;}
 .windowframe .topbar{height:30px; width:100%; background:rgba(0, 125, 170, 0.92);}
