--- a/docs/css/os_style.css
+++ b/docs/css/os_style.css
@@ -23,8 +23,8 @@ p,h1,h2,h3,h4,h5,h6{margin:0; padding:2px;}
 #appcontainerhoder {position: absolute; bottom:0; left:0; right:0;}
 #mainbar .appscontainer{  color:#fff; height:auto; width:90%; background:rgba(0,0,0,0.5); margin:20px auto; padding:10px; border-radius: 2px;    box-shadow: 0 0 10px rgba(29, 29, 29, 0.66)}
 #mainbar .appscontainer .icon { color:#fff; text-decoration: none; width:60px; height:60px; margin:5px; display: inline-block; text-align: center; font-size: 70%;}
-.windowframe{background:none; width: 100%; height: 100%;}
-.windowframe .topbar{height:30px; width:100%; background:rgba(0, 125, 170, 0.92);}
+#windowframe{display:none; background:#fff; width: 100%; height: 100%;}
+#windowframe .bottombar{background: rgb(211, 47, 47); position:absolute; bottom:0; right:0; height:30px; padding:5px; box-shadow: 0 0 2px #000;  }
 #taskbar{position:fixed; top:auto; right:0; bottom:0; left:0; height:40px; background:rgba(0,0,0,0.5); z-index: 9;
         padding:5px; }
 #tasksearchbar{ height: 100%; width:calc(100% - 40px); max-width: 400px; border-radius: 40px; outline:none; padding: 3px 40px 3px 20px; }
